# JLNN

./: .buildinfo  .gitignore  LICENSE  README.md  changelog.html  contributing.html  genindex.html  index.html  installation.html  license.html  main.py  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  testing.html  theory.html
.github/workflows/: docs.yml  publish.yml  tests.yml
_modules/: index.html
_sources/: changelog.rst.txt  contributing.rst.txt  index.rst.txt  installation.rst.txt  quickstart.rst.txt  theory.rst.txt
_sources/tutorials/: JLNN_NS_Bayesian_GraphSAGE.rst.txt  JLNN_basic_boolean_gates.rst.txt  JLNN_bayesian_svi_iris.rst.txt  JLNN_contradiction_detection.rst.txt  JLNN_explainability_rule_extraction_XAI.rst.txt  JLNN_gpu_tpu_acceleration.rst.txt  JLNN_graph_reasoning_pyreason.rst.txt  JLNN_kg_reasoning.rst.txt  JLNN_llm_rule_refinement.rst.txt  (+10 more)
_static/: documentation_options.js
examples/: JLNN_NS_Bayesian_GraphSAGE.ipynb  JLNN_NS_Bayesian_GraphSAGE_github.ipynb  JLNN_basic_boolean_gates.ipynb  JLNN_basic_inference.ipynb  JLNN_bayesian_svi_iris.ipynb  JLNN_contradiction_detection.ipynb  JLNN_explainability_rule_extraction_XAI_variantA.ipynb  JLNN_explainability_rule_extraction_XAI_variantB.ipynb  JLNN_gpu_tpu_acceleration.ipynb  JLNN_grand_cycle_optuna.ipynb  JLNN_graph_reasoning_pyreason.ipynb  JLNN_kg_reasoning.ipynb  JLNN_kg_reasoning_github.ipynb  JLNN_llm_rule_refinement.ipynb  JLNN_model_export.ipynb  JLNN_nanoGPT_logical_layer.ipynb  JLNN_pointcloud_classification.ipynb  JLNN_quantum_bell_inequalities.ipynb  JLNN_real_world_data_iris.ipynb  JLNN_temporal_gnn.ipynb  JLNN_temporal_logic.ipynb  JLNN_vit_training_github.ipynb  JLNN_weighted_rules.ipynb  JLNN_xarray_meta_learning.ipynb  JLNN_xarray_rule_monitoring_moe.ipynb  Jax_lnn_base.ipynb
tests/: conftest.py
tutorials/: JLNN_NS_Bayesian_GraphSAGE.html  JLNN_basic_boolean_gates.html  JLNN_bayesian_svi_iris.html  JLNN_contradiction_detection.html  JLNN_explainability_rule_extraction_XAI.html  JLNN_gpu_tpu_acceleration.html  JLNN_grand_cycle_optuna.html  JLNN_graph_reasoning_pyreason.html  JLNN_kg_reasoning.html  JLNN_llm_rule_refinement.html  JLNN_model_export.html  JLNN_pointcloud_classification.html  JLNN_quantum_bell_inequalities.html  JLNN_real_world_data_iris.html  JLNN_safety_verification.html  JLNN_temporal_gnn.html  JLNN_temporal_logic.html  JLNN_vit_training.html  JLNN_weighted_rules.html  JLNN_xarray_meta_learning.html  JLNN_xarray_rule_monitoring_moe.html  basic_inference_tutorial.html  index.html  introduction_tutorial.html
(+184 files in other folders)
