[project]
name = "jlnn"
version = "0.0.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flax>=0.12.2",
    "grain>=0.2.15",
    "jax>=0.8.2",
    "jaxlib==0.8.2",
    "jraph>=0.0.6.dev0",
    "lark>=1.3.1",
    "matplotlib",
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "numpyro>=0.19.0",
    "onnx>=1.20.1",
    "onnx2pytorch>=0.5.3",
    "onnx2torch",
    "onnxruntime",
    "optax>=0.2.6",
    "orbax>=0.1.9",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
    "torch>=2.10.0",
    "xarray",
]
