[project]
name = "jax-lnn"
version = "0.1.rc2"
description = "JAX Logical Neural Networks – neuro-symbolic framework with interval Łukasiewicz logic"
license = {text = "MIT"}
authors = [{name = "Ing. Radim Közl"}]
keywords = ["jax", "neuro-symbolic", "logical-neural-networks", "lukasiewicz", "interval-logic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 3 - Alpha",
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "flax>=0.12.2",
    "jax>=0.8.2",
    "jaxlib>=0.8.2",
    "lark>=1.3.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "onnx>=1.20.1",
    "onnx2pytorch>=0.5.3",
    "onnxruntime>=1.23.2",
    "optax>=0.2.6",
    "orbax>=0.1.9",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "xarray>=2025.12.0",
]

[project.optional-dependencies]

test = [
    "pytest>=9.0.2",
]
docs = [
    "build>=1.4.0",
    "furo>=2025.12.19",
    "nbsphinx>=0.9.8",
    "pandoc>=2.4",
    "sphinx>=9.0.4",
    "sphinx-autodoc-typehints>=3.6.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.7.0",
    "twine>=6.2.0",
]
# Other auxiliary things that are not necessary for running/exporting
extra = [
    "grain>=0.2.15",
    "jraph>=0.0.6.dev0",
    "numpyro>=0.19.0",
    "onnx2torch>=1.5.15",
    "pandas>=2.3.3",
    "pyarrow>=23.0.0",
    "polars>=1.37.1",
    "scipy>=1.17.0",
    "sympy>=1.14.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/RadimKozl/JLNN"
documentation = "https://radimkozl.github.io/JLNN/"
source = "https://github.com/RadimKozl/JLNN"
